@@ -33,7 +33,7 @@
   "definitions/types/roomTypes.json" : -3323195902752355901,
   "definitions/types/wallTypes.json" : -4869015804557788851,
   "music/*.ogg" : 2801916269635105482,
-  "settings/immigrationSettings.json" : 7711600680193300633,
+  "settings/immigrationSettings.json" : 2632599321237030416,
   "settings/sunlight.json" : -6757123858450112423,
   "settings/timeAndDaySettings.json" : -5255821227544219838,
   "sounds/data/*.wav" : 5720239473994703751,
