@@ -4,8 +4,8 @@
     "enabled" : true
   },
   "immigrationCaps" : {
-    "minAmountForCapsToApply" : 20,
-    "maxImmigrationPerPopulation" : 0.4,
+    "minAmountForCapsToApply" : 30,
+    "maxImmigrationPerPopulation" : 0.3,
     "enabled" : true
   },
   "baseImmigration" : {
