@@ -14,6 +14,9 @@ Alpha 5.1
     - Stone chippings from stonemasonry
     - Sparks from blacksmith's forge (look out for fires later!)
 - Option to empty items containing liquid onto the ground
+- Immigration settings are now open to modding
+- Added the initial stockpile back underneath the starting items
+- Fixed a bug for when an invalid language code was kept in preferences
 
 Alpha 5.0.1
 
